--- a/HospitalV2/HospitalV2.vcxproj.filters
+++ b/HospitalV2/HospitalV2.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="hospital.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Nurse.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Researcher.cpp">
@@ -72,6 +75,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Nurse.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
