init lines, copy c'tor, array increment

--- a/HospitalV2/HospitalV2.vcxproj
+++ b/HospitalV2/HospitalV2.vcxproj
@@ -24,6 +24,7 @@
     <ClInclude Include="department.h" />
     <ClInclude Include="doctor.h" />
     <ClInclude Include="hospital.h" />
+    <ClInclude Include="main.h" />
     <ClInclude Include="Nurse.h" />
     <ClInclude Include="patient.h" />
     <ClInclude Include="Researcher.h" />
