--- a/HospitalV2/HospitalV2.vcxproj.filters
+++ b/HospitalV2/HospitalV2.vcxproj.filters
@@ -45,7 +45,7 @@
     <ClInclude Include="Nurse.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="main.h">
+    <ClInclude Include="Interface.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -81,6 +81,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Nurse.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Interface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
