--- a/HospitalV2/HospitalV2.vcxproj
+++ b/HospitalV2/HospitalV2.vcxproj
@@ -33,6 +33,8 @@
     <ClInclude Include="StaffMember.h" />
     <ClInclude Include="Surgeon.h" />
     <ClInclude Include="SurgeonResearcher.h" />
+    <ClInclude Include="SurgeryVisit.h" />
+    <ClInclude Include="TestsVisit.h" />
     <ClInclude Include="visit.h" />
   </ItemGroup>
   <ItemGroup>
@@ -51,6 +53,8 @@
     <ClCompile Include="StaffMember.cpp" />
     <ClCompile Include="Surgeon.cpp" />
     <ClCompile Include="SurgeonResearcher.cpp" />
+    <ClCompile Include="SurgeryVisit.cpp" />
+    <ClCompile Include="TestsVisit.cpp" />
     <ClCompile Include="visit.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
