--- a/HospitalV2/HospitalV2.vcxproj.filters
+++ b/HospitalV2/HospitalV2.vcxproj.filters
@@ -95,9 +95,6 @@
     <ClCompile Include="department.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Nurse.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -120,6 +117,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TestsVisit.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main-real.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
