Finished all operators, short main, get input, and more... what's left to do:  all patients updates, and fix surgeon-researcher that doens't work(I tried and it didn't work, can't create an object).

--- a/HospitalV2/HospitalV2.vcxproj
+++ b/HospitalV2/HospitalV2.vcxproj
@@ -45,8 +45,8 @@
     <ClCompile Include="DoctorResearcher.cpp" />
     <ClCompile Include="hospital.cpp" />
     <ClCompile Include="Interface.cpp" />
+    <ClCompile Include="main-temp.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="main-real.cpp" />
     <ClCompile Include="Nurse.cpp" />
     <ClCompile Include="patient.cpp" />
     <ClCompile Include="Researcher.cpp" />
