changed Staff Member array within Department to use <Array> template

--- a/HospitalV2/HospitalV2.vcxproj
+++ b/HospitalV2/HospitalV2.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Array.h" />
     <ClInclude Include="Article.h" />
     <ClInclude Include="Date.h" />
     <ClInclude Include="department.h" />
