--- a/HospitalV2/HospitalV2.vcxproj.filters
+++ b/HospitalV2/HospitalV2.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="visit.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Array.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Researcher.cpp">
